[tool.poetry]
name = "postgisgeolocations"
version = "0.1.0"
description = "PostGIS FastAPI SQLAlchemy"
authors = ["Bekzod Mirahmedov <notarious2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
alembic = "^1.13.1"
sqlalchemy = "^2.0.25"
geoalchemy2 = {extras = ["shapely"], version = "^0.14.3"}
uvicorn = "^0.25.0"
asyncpg = "^0.29.0"
pydantic-extra-types = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
